# ChatDoctor

./: LICENSE  fine-tune_lora.sh  pyproject.toml  requirements.txt
chatdoctor/: chat.py  chat_lora.py  conversation.py  fine-tune.sh  train.py
chatdoctor/serve/: cli.py
