[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatDoctor"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "wandb", "tokenizers==0.12.1", "sentencepiece", "numpy",
    "torch", "openai", "fire", "rouge_score"
]

[tool.setuptools.packages.find]
exclude = ["Autonomous_ChatDoctor_csv*", "Autonomous_ChatDoctor_Wikipedia*", "Autonomous_ChatGPT_API", "fig*", "llama-7b-hf*", "lora_models*", "peft*", "pretrained*", "pretrained-raw", "wandb*"]

[tool.wheel]
exclude = ["Autonomous_ChatDoctor_csv*", "Autonomous_ChatDoctor_Wikipedia*", "Autonomous_ChatGPT_API", "fig*", "llama-7b-hf*", "lora_models*", "peft*", "pretrained*", "pretrained-raw", "wandb*"]